@@ -34,6 +34,7 @@ enum TSC_COLUMN
 	TSCC_NUMBER,
 	TSCC_NAME,
 	TSCC_FREQUENCY,
+	TSCC_ENCRYPTED,
 	TSCC_CHANNEL
 };
 
@@ -62,6 +63,7 @@ BOOL CTunerScanDlg::OnInitDialog()
 	m_ChannelList.InsertColumn(TSCC_NUMBER, _T("N"), LVCFMT_LEFT, 50);
 	m_ChannelList.InsertColumn(TSCC_NAME, _T("Name"), LVCFMT_LEFT, 250);
 	m_ChannelList.InsertColumn(TSCC_FREQUENCY, _T("Frequency"), LVCFMT_LEFT, 100);
+	m_ChannelList.InsertColumn(TSCC_ENCRYPTED, _T("Encrypted"), LVCFMT_LEFT, 80);
 	m_ChannelList.InsertColumn(TSCC_CHANNEL, _T("Channel"), LVCFMT_LEFT, 0);
 
 	m_Progress.SetRange(0, 100);
@@ -196,6 +198,9 @@ LRESULT CTunerScanDlg::OnNewChannel(WPARAM wParam, LPARAM lParam)
 
 	strTemp.Format(_T("%d"), Channel.GetFrequency());
 	m_ChannelList.SetItemText (nItem, TSCC_FREQUENCY, strTemp);
+
+	strTemp = Channel.IsEncrypted() ? _T("Yes") : _T("No");
+	m_ChannelList.SetItemText (nItem, TSCC_ENCRYPTED, strTemp);
 
 	m_ChannelList.SetItemText (nItem, TSCC_CHANNEL, (LPCTSTR) lParam);
 
